# gstreamer-cookbook

./: .buildinfo  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build-docker.sh  build-with-conan.sh  build.sh  conanfile.txt  fabfile.py  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js  start-docker.sh
1.basic/: basic.html  concept.html  design.html  glib.html  gobject.html  gst-buffer.html  gst-caps.html  gst-element.html  gst-event.html  gst-pad.html  gst-promise.html  gst-query.html  gst-state.html  gstbus.html  gstelement.html  gstpad.html  gstpromise.html  index.html  nv12.html  overview.html  preliminary.html  sink-element.html  state.html
2.tutorial/: 1.hello-world.html  2.concepts.html  3.dynamic-pipeline.html  4.time-management.html  5.gui-toolkit-integration.html  6.mdeia-formats-pad-capabilities.html  7.multithreading-pad-availability.html  8.short-cutting-pipeline.html  9.media-information-gathering.html  overview.html
3.application/: audio_pipeline.html  caps_negotiation.html  debug.html  deepstream-api.html  deepstream.html  faq.html  gst-dsexample.html  index.html  iva.html  live_stream.html  metadata.html  overview.html  pipeline_manipulation.html  tool.html  video_pipeline.html
4.plugin/: 1.plugin-boilerplate.html  2.plugin-pads.html  7.plugin-signal.html  8.plugin-test.html  decodebin.html  filesink.html  frequent-plugin.html  hlssink2.html  index.html  mp4mux.html  nvdsosd.html  nvstreammux.html  nvvideoconvert.html  overview.html  queue.html  splitmuxsink.html  tee.html  v4l2sink.html  v4l2src.html  webrtc_flow.html  webrtcbin.html
5.deepstream/: index.html
5.tool/: arecord.html  gst-device-monitor.html  gst-launch.html  gst-tracer.html  index.html  overview.html  srs.html  v4l2-ctl.html  v4l2loopback.html
6.tool/: arecord.html  index.html  overview.html  srs.html  v4l2-ctl.html  v4l2loopback.html
_sources/: index.rst.txt
_sources/1.basic/: basic.md.txt  concept.md.txt  design.rst.txt  glib.md.txt  gst-bin.md.txt  gst-buffer.md.txt  gst-bus.md.txt  gst-event.md.txt  gst-pad.md.txt  gst-state.md.txt  gstbus.md.txt  index.rst.txt  transform-element.md.txt  transform_element.md.txt
_sources/2.tutorial/: 6.mdeia-formats-pad-capabilities.rst.txt  7.multithreading-pad-availability.rst.txt  8.short-cutting-pipeline.rst.txt  index.rst.txt
_sources/3.application/: audio_pipeline.md.txt  av_sync.md.txt  caps_negotiation.rst.txt  debug.md.txt  deepstream.md.txt  faq.md.txt  index.rst.txt  live_stream.md.txt  tool.md.txt  video_pipeline.md.txt
_sources/4.plugin/: 8.plugin-test.md.txt  decodebin.md.txt  index.rst.txt  nvstreammux.md.txt  nvvideo4linux2.md.txt
_sources/5.tool/: gst-launch.md.txt  gst-tracer.md.txt  linux.md.txt  srs.md.txt  v4l2loopback.md.txt
_sources/6.misc/: index.rst.txt  opencv.md.txt
_sources/6.tool/: index.rst.txt
doc/: 0.preliminary.md  1.basic.md  10.faq.md  11.glib_api.md  11.tool.md  12.glib.md  12.gobject_api.md  13.gobject.md  2.concept.md  20.gstelement.md  21.gstpad.md  3.bus.md  30.plugin-overview.md  31.nvdsosd.md  31.plugin-v4l2src.md  32.plugin-tee.md  33.plugin-filesink.md  33.plugin-hlssink2.md  33.plugin-mp4mux.md  33.plugin-queue.md  33.plugin-splitmuxsink.md  4.plugin.md  41.nvdsosd.md  README.md  _sidebar.md  guide.md
doc/source/: abbrs.ref  conf.py  index.rst  links.ref  tags.ref
doc/source/1.basic/: basic.md  glib.md  gobject.md  gst-buffer.md  gst-query.md  gstpromise.md  index.rst  overview.rst  sink-element.md  state.md
doc/source/2.tutorial/: 1.hello-world.rst  4.time-management.rst  5.gui-toolkit-integration.rst  overview.rst
doc/source/3.application/: audio_pipeline.md  caps_negotiation.rst  deepstream-api.md  deepstream.md  faq.md  gst-dsexample.md  index.rst  iva.md  live_stream.md  metadata.md  overview.rst  pipeline_manipulation.md  video_pipeline.md
doc/source/4.plugin/: 1.plugin-boilerplate.md  2.plugin-pads.md  7.plugin-signal.md  8.plugin-test.md  decodebin.md  frequent-plugin.md  index.rst  mp4mux.md  overview.md  queue.md  v4l2sink.md  v4l2src.md  webrtc_flow.rst  webrtcbin.md
doc/source/5.tool/: index.rst  overview.md  srs.md  v4l2-ctl.md
doc/source/6.misc/: cross_compile.md  index.rst
doc/source/6.tool/: index.rst  overview.md
example/: CMakeLists.txt  basic-example-1.cpp  enumerate-device.cpp  file_monitor.cpp  glib-example-1.cpp  gst-audio-device.cpp  gst-audio-record.cpp  gst-data-probe.cpp  gst-fakesink.cpp  gst-pipeline-verify.cpp  gst-queue-exam.cpp  gst-video-record.cpp  hls-exam.cpp  hls-test.cpp  hlssink2-example.cpp  hlssink2-example.h  m3u8_reader.cpp  pipeline-exam-1.cpp  pipeline-exam-1.h  pipeline_builder.cpp  pipeline_builder.h  pipeline_controller.cpp  pipeline_controller.h
example/etc/: pipeline.yaml
example/plugin/gst-template-main/gst-plugin/: meson.build
example/plugin/gst-template-main/gst-plugin/src/: gstwalterfilter.c  gstwalterfilter.h
example/signalling/: cert.pem  key.pem  simple-server.py
script/: gst_test.py  media_player.py  play_flv.html  playback.sh
test/: CMakeLists.txt  gobject_test.cpp  hls_util_test.cpp  playlist_20240111141043.m3u8  playlist_20240111145046.m3u8  playlist_util_test.cpp  snapshot_20240111144151.m3u8  string_util_test.cpp  time_util_test.cpp  unit_test.cpp  unit_test_result.xml  waltertest.cpp  yaml_test.cpp
tutorial/: CMakeLists.txt  README.rst  basic-tutorial-2.c  basic-tutorial-3.c
util/: CMakeLists.txt  blocking_queue.h  file_util.cpp  file_util.h  gst_util.cpp  gst_util.h  hls_util.cpp  hls_util.h  logger.cpp  logger.h  string_util.cpp  string_util.h  time_util.cpp  time_util.h
