find_package(fmt)

add_executable(gst-data-probe gst-data-probe.cpp)
add_executable(gst-queue-exam gst-queue-exam.cpp)
add_executable(pipeline-exam-1 pipeline-exam-1.cpp)
add_executable(glib-example-1 glib-example-1.cpp)
add_executable(hls-exam hls-exam.cpp pipeline_controller.cpp)
add_executable(hls-test hls-test.cpp)

target_link_libraries(gst-data-probe ${GST_LIBRARIES})
target_link_libraries(gst-queue-exam ${GST_LIBRARIES})
target_link_libraries(pipeline-exam-1 ${GST_LIBRARIES})
target_link_libraries(glib-example-1 ${GST_LIBRARIES})
target_link_libraries(hls-test ${GST_LIBRARIES} fmt::fmt)
target_link_libraries(hls-exam common_utils ${GST_LIBRARIES} fmt::fmt)