
add_executable(basic-tutorial-1 basic-tutorial-1.c)
add_executable(basic-tutorial-2 basic-tutorial-2.c)
add_executable(basic-tutorial-3 basic-tutorial-3.c)
add_executable(basic-tutorial-4 basic-tutorial-4.c)
#add_executable(basic-tutorial-5 basic-tutorial-5.c)
add_executable(basic-tutorial-6 basic-tutorial-6.c)
#add_executable(basic-tutorial-7 basic-tutorial-7.c)
#add_executable(basic-tutorial-8 basic-tutorial-8.c)

target_link_libraries(basic-tutorial-1 ${GST_LIBRARIES} )
target_link_libraries(basic-tutorial-2 ${GST_LIBRARIES} )
target_link_libraries(basic-tutorial-3 ${GST_LIBRARIES} )
target_link_libraries(basic-tutorial-4 ${GST_LIBRARIES} )
#target_link_libraries(basic-tutorial-5 ${GST_LIBRARIES} )
target_link_libraries(basic-tutorial-6 ${GST_LIBRARIES} )
#target_link_libraries(basic-tutorial-7 ${GST_LIBRARIES} )
#target_link_libraries(basic-tutorial-8 ${GST_LIBRARIES} )